Votingapp-Deployment/advanced/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress-vote
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - vote.anaeleboo.com
    secretName: example-tls-34
  rules:
    - host: vote.anaeleboo.com
      http:
        paths:
          - path: /vote
            pathType: Prefix
            backend:
              service:
                name: result-service
                port:
                  number: 8080
          - path: /result
            pathType: Prefix
            backend:
              service:
                name: voting-service
                port:
                  number: 8080

#
